<resources>
    <string name="app_name">Travelmantics</string>
    <string name="title_hint">Deal Title</string>
    <string name="price_hint">Price</string>
    <string name="description_hint">Description</string>
    <string name="save">Save</string>
    <string name="new_travel_deal">New Travel Deal</string>
    <string name="delete_menu">Delete</string>
    <string name="logout">logout</string>
    <string name="upload_image">Upload Image</string>
</resources>
