<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            xmlns:android="http://schemas.android.com/apk/res/android">
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".DealActivity">
    <EditText
            android:hint="@string/title_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtTitle"
            android:layout_marginTop="@dimen/txt_margin_large"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="@dimen/txt_margin_standard"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="8dp"
            android:layout_marginStart="@dimen/txt_margin_standard"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            tools:ignore="Autofill,TextFields"/>
    <EditText
            android:hint="@string/price_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtPrice"
            android:layout_marginTop="@dimen/txt_margin_standard"
            app:layout_constraintTop_toBottomOf="@+id/txtTitle"
            android:layout_marginEnd="@dimen/txt_margin_standard"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="8dp"
            android:layout_marginStart="@dimen/txt_margin_standard"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            tools:ignore="Autofill,TextFields"/>
    <EditText
            android:hint="@string/description_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtDescription"
            android:layout_marginTop="@dimen/txt_margin_standard"
            app:layout_constraintTop_toBottomOf="@+id/txtPrice"
            android:layout_marginStart="@dimen/txt_margin_standard"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="@dimen/txt_margin_standard"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="8dp"
            tools:ignore="Autofill,TextFields"/>
    <Button
            android:text="@string/upload_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnImage" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txtDescription" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>
    <ImageView
            android:src="@android:color/transparent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/image"
            app:layout_constraintTop_toBottomOf="@+id/btnImage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/app_name"
            android:layout_marginTop="60dp"
            android:layout_marginRight="8dp"
            android:layout_marginEnd="8dp"
          />

    <ProgressBar android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/progress_upload"
                 android:visibility="gone"
                 app:layout_constraintEnd_toEndOf="@+id/image"
                 android:layout_marginTop="8dp"
                 app:layout_constraintTop_toTopOf="@+id/image"
                 app:layout_constraintStart_toStartOf="@+id/image"
                 android:layout_marginLeft="8dp"
                 android:layout_marginStart="8dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>