<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DealActivity">
    <EditText
            android:hint="@string/title_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtTitle"
            android:layout_marginTop="@dimen/txt_margin_large"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="@dimen/txt_margin_standard"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="8dp"
            android:layout_marginStart="@dimen/txt_margin_standard"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"/>
    <EditText
            android:hint="@string/price_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtPrice"
            android:layout_marginTop="@dimen/txt_margin_standard"
            app:layout_constraintTop_toBottomOf="@+id/txtTitle"
            android:layout_marginEnd="@dimen/txt_margin_standard"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="8dp"
            android:layout_marginStart="@dimen/txt_margin_standard"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"/>
    <EditText
            android:hint="@string/description_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtDescription"
            android:layout_marginTop="@dimen/txt_margin_standard"
            app:layout_constraintTop_toBottomOf="@+id/txtPrice"
            android:layout_marginStart="@dimen/txt_margin_standard"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="@dimen/txt_margin_standard"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginRight="8dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>